feat: mockup timer and template #9

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <title>Calculationster</title>
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/sanitize.css" />
+
+    <!-- * Google font styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <main id="main__game" class="main__game">
+      <div class="game__timer">
+        <h1 class="timer__title">TIME:</h1>
+        <label class="timer__label">10:00</label>
+      </div>
+    </main>
     <script src="./src/main.js"></script>
   </body>
 </html>
