feature: btn to start the operations In Progress

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
   </head>
   <body>
     <main id="main__game" class="main__game">
-      <div class="operation__list">
-        <div class="operation__item">
-          <p class="operation__question"></p>
-          <p class="operation__answer"></p>
-        </div>
-      </div>
+      <div class="operation__list"></div>
       <button id="game__start-btn" class="game__start-btn">Start</button>
     </main>
 
