add html and start button functionality, add checker for correct answers on user input on an input field

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
   </head>
   <body>
     <main id="main__game" class="main__game">
-      <div class="operation__list"></div>
+      <div class="operation__list">
+           <div class="operation__item">
+               <p class="operation__question"></p>
+          </div>
+      </div>
       <button id="game__start-btn" class="game__start-btn">Start</button>
     </main>
+    
 
     <script src="./src/main.js"></script>
   </body>
