feat: timer functionality including arstix changes

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   </head>
   <body>
     <main id="main__game" class="main__game">
+      <div class="game__timer">
+        <h1 class="timer__title">TIME:</h1>
+        <label class="timer__label" id="gameTimer"></label>
+      </div>
       <div class="operation__list">
-           <div class="operation__item">
-               <p class="operation__question"></p>
-          </div>
+        <div class="operation__item">
+          <p class="operation__question"></p>
+        </div>
       </div>
       <button id="game__start-btn" class="game__start-btn">Start</button>
     </main>
-    
 
     <script src="./src/main.js"></script>
   </body>
