feat: start game shows timer also refactored code main fun and timer object

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main id="main__game" class="main__game">
-      <div class="game__timer">
+      <div id="game__timer" class="game__timer hidden-element">
         <h1 class="timer__title">TIME:</h1>
         <label class="timer__label" id="gameTimer"></label>
       </div>
