--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
     <link rel="stylesheet" href="./src/sanitize.css" />
   </head>
   <body>
-    <main id="main__game" class="main__game">
-      <div id="game__timer" class="game__timer hidden-element">
-        <h1 class="timer__title">TIME:</h1>
-        <label class="timer__label" id="gameTimer"></label>
-      </div>
-      <div class="operation__list">
-        <div class="operation__item">
-          <p class="operation__question"></p>
+    <div class="app-wrapper">
+      <aside class="left-sidebar"></aside>
+      <main id="main__game" class="main__game">
+        <div id="title-screen">
+          <h1 class="title-screen__title">Calculationster</h1>
+          <button id="game__start-btn" class="game__start-btn">Start</button>
         </div>
-      </div>
-      <button id="game__start-btn" class="game__start-btn">Start</button>
-    </main>
-
+        <div id="operation__panel" class="operation__panel hidden-element">
+          <p id="operation__question" class="operation__question"></p>
+        </div>
+      </main>
+      <aside class="right-sidebar">
+        <div id="game__timer" class="game__timer hidden-element">
+          <h1 class="timer__title">Time:</h1>
+          <label class="timer__label" id="gameTimer"></label>
+        </div>
+        <div id="game__score" class="game__score hidden-element">
+          <h1 class="score__title">Score:</h1>
+          <label class="score__label" id="gameScore"></label>
+        </div>
+      </aside>
+    </div>
     <script src="./src/main.js"></script>
   </body>
 </html>
