--- a/index.html
+++ b/index.html
@@ -5,21 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculationster</title>
-    <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/sanitize.css" />
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <div class="app-wrapper">
-      <aside class="left-sidebar"></aside>
+      <aside class="left-sidebar">
+        <div class="game-left-panel hidden-element">
+          <h1 id="game-left-panel__title" class="game-left-panel__title">
+            Calculationster
+          </h1>
+          <div class="game-left-panel__items">
+            <h1 class="items__header"></h1>
+            <div class="items__container"></div>
+          </div>
+        </div>
+      </aside>
+
       <main id="main__game" class="main__game">
         <div id="title-screen">
-          <h1 class="title-screen__title">Calculationster</h1>
+          <h1 id="left-sidebar__title" class="title-screen__title">
+            Calculationster
+          </h1>
           <button id="game__start-btn" class="game__start-btn">Start</button>
         </div>
-        <div id="operation__panel" class="operation__panel hidden-element">
-          <p id="operation__question" class="operation__question"></p>
+
+        <div id="game-wrapper" class="game-wrapper hidden-element">
+          <div id="operation__panel" class="operation__panel">
+            <p id="operation__question" class="operation__question"></p>
+          </div>
+          <div
+            id="player-notification-msgs"
+            class="player-notification-msgs"
+          ></div>
+          <div id="monster-container" class="monster-container"></div>
         </div>
       </main>
+
       <aside class="right-sidebar">
         <div id="game__timer" class="game__timer hidden-element">
           <h1 class="timer__title">Time:</h1>
