style: #32 temp title screen center aligned

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </aside>
 
       <main id="main__game" class="main__game">
-        <div id="title-screen">
+        <div id="title-screen" class="title-screen">
           <h1 id="left-sidebar__title" class="title-screen__title">
             Calculationster
           </h1>
