add monsters and display monster related to the level

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div class="operation__item">
           <p class="operation__question"></p>
         </div>
+        <div class="monster">
+          <img src="" alt="" id="monster">
+        </div>
       </div>
       <button id="game__start-btn" class="game__start-btn">Start</button>
     </main>
