style: basic triple grid layout

--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
           ></div>
           <div id="monster-container" class="monster-container">
             <div class="monster">
-              <img src="" alt="" id="monster">
+              <img src="" alt="" id="monster" />
             </div>
-          </div>
           </div>
         </div>
       </main>
-
       <aside class="right-sidebar">
         <div id="game__timer" class="game__timer hidden-element">
           <h1 class="timer__title">Time:</h1>
