style: left title appearing on click

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="app-wrapper">
       <aside class="left-sidebar">
-        <div class="game-left-panel hidden-element">
+        <div id="game-left-panel" class="game-left-panel hidden-element">
           <h1 id="game-left-panel__title" class="game-left-panel__title">
             Calculationster
           </h1>
