--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       </div>
       <button id="game__start-btn" class="game__start-btn">Start</button>
     </main>
-
+    <div class="game____over" id="game____overdiv">
+    </div>
     <script src="./src/main.js"></script>
   </body>
 </html>
