--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculationster</title>
+    <link  rel='stylesheet' href='http://fonts.googleapis.com/css?family=Press+Start+2P' type='text/css'>
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/sanitize.css" />
   </head>
   <body>
     <main id="main__game" class="main__game">
       <div id="game__timer" class="game__timer hidden-element">
-        <h1 class="timer__title">TIME:</h1>
-        <label class="timer__label" id="gameTimer"></label>
+        <h1 class="timer__title">TIME</h1>
+        <div id="timer-animation-container"></div>
+        <div class="timer__label" id="gameTimer"></div>
+        
       </div>
       <div class="operation__list">
         <div class="operation__item">
