style: centered monster and adapted timer

--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
             class="player-notification-msgs"
           ></div>
           <div id="monster-container" class="monster-container">
-            <div class="monster">
-              <img src="" alt="" id="monster" />
-            </div>
+            <img src="" alt="" id="monster" class="monster" />
           </div>
         </div>
       </main>
       <aside class="right-sidebar">
         <div id="game__timer" class="game__timer hidden-element">
-          <h1 class="timer__title">Time:</h1>
+          <h1 class="timer__title">TIME:</h1>
+          <div id="timer-animation-container"></div>
           <label class="timer__label" id="gameTimer"></label>
         </div>
         <div id="game__score" class="game__score hidden-element">
