--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculationster</title>
-    <link  rel='stylesheet' href='http://fonts.googleapis.com/css?family=Press+Start+2P' type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/sanitize.css" />
   </head>
@@ -25,7 +29,10 @@
           <img src="" alt="" id="monster">
         </div>
       </div>
-      <button id="game__start-btn" class="game__start-btn">Start</button>
+      <div id="start-container">
+      <h1 id='opening-title'>Calculationster</h1>
+      <!-- <button id="game__start-btn" class="game__start-btn">Start</button> -->
+      </div>
     </main>
     <div class="game____over" id="game____overdiv">
     </div>
