lighting effects, start button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="./src/sanitize.css" />
   </head>
   <body>
+
+    <!-- <div class="lightining"></div> -->
+    <div class="rain">
     <main id="main__game" class="main__game">
+
       <div id="game__timer" class="game__timer hidden-element">
         <h1 class="timer__title">TIME</h1>
         <div id="timer-animation-container"></div>
@@ -31,11 +35,14 @@
       </div>
       <div id="start-container">
       <h1 id='opening-title'>Calculationster</h1>
-      <!-- <button id="game__start-btn" class="game__start-btn">Start</button> -->
+      <div class="btn">
+      <button id="game__start-btn" class="game__start-btn">Start</button>
+      </div>
       </div>
     </main>
     <div class="game____over" id="game____overdiv">
     </div>
+  </div>
     <script src="./src/main.js"></script>
   </body>
 </html>
