--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <!-- <div class="lightining"></div> -->
-    <div class="rain">
+    <div class="thunder">  </div>
     <main id="main__game" class="main__game">
 
       <div id="game__timer" class="game__timer hidden-element">
@@ -42,7 +42,7 @@
     </main>
     <div class="game____over" id="game____overdiv">
     </div>
-  </div>
+
     <script src="./src/main.js"></script>
   </body>
 </html>
