style: aligned game over and styled sidebars

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="app-wrapper">
       <!-- <div class="lightining"></div> -->
 
-      <aside class="left-sidebar">
+      <aside class="left-sidebar sidebar">
         <div id="game-left-panel" class="game-left-panel hidden-element">
           <h1 id="game-left-panel__title" class="game-left-panel__title">
             Calculationster
@@ -53,9 +53,10 @@
             <img src="" alt="" id="monster" class="monster" />
           </div>
         </div>
+        <div class="game____over" id="game____overdiv"></div>
       </main>
 
-      <aside class="right-sidebar">
+      <aside class="right-sidebar sidebar">
         <div id="game-right-panel" class="game-right-panel hidden-element">
           <div id="game__timer" class="game__timer hidden-element">
             <h1 class="timer__title">TIME</h1>
@@ -69,9 +70,8 @@
           </div>
         </div>
       </aside>
-
-      <div class="game____over" id="game____overdiv"></div>
     </div>
+
     <script src="./src/main.js"></script>
   </body>
 </html>
