style: right side bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Press+Start+2P"
+      type="text/css"
+    />
     <link rel="stylesheet" href="./src/sanitize.css" />
     <link rel="stylesheet" href="./src/style.css" />
   </head>
@@ -59,12 +64,12 @@
       <aside class="right-sidebar sidebar">
         <div id="game-right-panel" class="game-right-panel hidden-element">
           <div id="game__timer" class="game__timer hidden-element">
-            <h1 class="timer__title">TIME</h1>
+            <h1 class="timer__title">TIME:</h1>
             <div id="timer-animation-container"></div>
             <div class="timer__label" id="gameTimer"></div>
           </div>
           <div id="game__score" class="game__score">
-            <h1 class="score__title">Score:</h1>
+            <h1 class="score__title">SCORE:</h1>
             <!-- TODO gameScore functionality -->
             <label class="score__label" id="gameScore">0</label>
           </div>
