add ui control for cut scene

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </aside>
-
+      <!-- welcome page -->
       <main id="main__game" class="main__game">
         <div id="start-container">
           <div class="thunder"></div>
@@ -44,6 +44,10 @@
           <div class="btn-container">
             <button id="game__start-btn" class="game__start-btn">Start</button>
           </div>
+        </div>
+        <!-- cut scene -->
+        <div id="cut-scene" class="hidden-element">
+          <button class="next-scene">next</button>
         </div>
 
         <div id="game-wrapper" class="game-wrapper hidden-element">
