--- a/index.html
+++ b/index.html
@@ -20,10 +20,24 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
+
+    <!-- welcome page -->
+    <div id="start-container">
+      <div class="thunder"></div>
+      <h1 id="opening-title">Calculationster</h1>
+      <div class="btn-container">
+        <button id="game__start-btn" class="game__start-btn">Start</button>
+      </div>
+    </div>
+    <!-- cut scene -->
+    <div id="cut-scene" class="hidden-element">
+      <button class="next-scene">next</button>
+    </div>
+
     <div class="app-wrapper">
       <!-- <div class="lightining"></div> -->
 
-      <aside class="left-sidebar sidebar">
+      <aside class="left-sidebar sidebar hidden-element">
         <div id="game-left-panel" class="game-left-panel hidden-element">
           <h1 id="game-left-panel__title" class="game-left-panel__title">
             Calculationster
@@ -36,19 +50,8 @@
           </div>
         </div>
       </aside>
-      <!-- welcome page -->
       <main id="main__game" class="main__game">
-        <div id="start-container">
-          <div class="thunder"></div>
-          <h1 id="opening-title">Calculationster</h1>
-          <div class="btn-container">
-            <button id="game__start-btn" class="game__start-btn">Start</button>
-          </div>
-        </div>
-        <!-- cut scene -->
-        <div id="cut-scene" class="hidden-element">
-          <button class="next-scene">next</button>
-        </div>
+
 
         <div id="game-wrapper" class="game-wrapper hidden-element">
           <div id="operation__panel" class="operation__panel">
@@ -65,7 +68,7 @@
         <div class="game____over" id="game____overdiv"></div>
       </main>
 
-      <aside class="right-sidebar sidebar">
+      <aside class="right-sidebar sidebar hidden-element">
         <div id="game-right-panel" class="game-right-panel hidden-element">
           <div id="game__timer" class="game__timer hidden-element">
             <h1 class="timer__title">TIME:</h1>
