--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button class="next-scene">next</button>
     </div>
 
-    <div class="app-wrapper">
+    <div class="app-wrapper hidden-element">
       <!-- <div class="lightining"></div> -->
 
       <aside class="left-sidebar sidebar hidden-element">
