wizard 1st scene

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     </div>
     <!-- cut scene -->
     <div id="cut-scene" class="hidden-element">
-      <div id="scene1">
-      </div>
+      <img src="" alt="" id="scene1" class="wizard">
       <div class="next-wrapper">
       <button class="next-scene hidden-element"><i class="fas fa-angle-double-right"></i></i></button>
       </div>
