wizard fix, change function into ui handler

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </div>
     <!-- cut scene -->
     <div id="cut-scene" class="hidden-element">
-      <img src="" alt="" id="scene1" class="wizard">
+      <div id="scene1">
+      <img src="" alt="" id="wizard1" class="wizard">
+      </div>
       <div class="next-wrapper">
       <button class="next-scene hidden-element"><i class="fas fa-angle-double-right"></i></i></button>
       </div>
