wizard fix, change function into ui

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <!-- cut scene -->
     <div id="cut-scene" class="hidden-element">
-      <div id="scene1">
+      <div class="scene">
       <img src="" alt="" id="wizard1" class="wizard">
       </div>
       <div class="next-wrapper">
