2 scenes, updated background and animated text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <!-- cut scene -->
     <div id="cut-scene" class="hidden-element">
       <div class="scene">
+        <div id="story"></div>
       <img src="" alt="" id="wizard1" class="wizard">
+      <img src="" alt="" id="egg2" class="egg">
       </div>
       <div class="next-wrapper">
       <button class="next-scene hidden-element"><i class="fas fa-angle-double-right"></i></i></button>
