feat: added credits btn #64

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="thunder"></div>
       <h1 id="opening-title">Calculationster</h1>
       <div class="btn-container">
-        <button id="game__start-btn" class="game__start-btn">Start</button>
+        <button id="game__start-btn" class="game__start-btn title-screen-btn">Start</button>
+        <button id="game__credits-btn" class="game__credits-btn title-screen-btn">Credits</button>
       </div>
     </div>
     <!-- cut scene -->
