--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Press+Start+2P"
+      href="https://fonts.googleapis.com/css?family=Press+Start+2P"
       type="text/css"
     />
     <link rel="stylesheet" href="./src/sanitize.css" />
