--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             <h1 class="items__header">Items:</h1>
             <div class="items__container">
               <!-- TODO generate a list of items in JS -->
+              <div id="special-items" class="specialItem__div">
+                  <img src="" class="" id="specialEffect1" />
+                  <img src="" class="" id="specialEffect2" />
+                  <img src="" class="" id="specialEffect3" />
+                  <img src="" class="" id="specialEffect4" />
+                  <img src="" class="" id="specialEffect5" />
+              </div>
             </div>
           </div>
         </div>
