feat: WIP credits

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
       </aside>
     </div>
 
+    <div class="credits__msg credits__msg--hidden">
+      <ul class="credits__msg-list">
+        <li></li>
+      </ul>
+    </div>
     <script src="./src/main.js"></script>
   </body>
 </html>
