fix: prevent having #close on the url

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           "Designed by vectorpouch / Freepik"
         </li>
       </ul>
-      <a class="credits__close-modal" href="#close">&times;</a>
+      <a class="credits__close-modal" href="./index.html">&times;</a>
     </div>
   </div>
   
