feat: added more credits and styling #64

--- a/index.html
+++ b/index.html
@@ -96,16 +96,10 @@
     <div class="credits__container">
       <h1 class="credits__header">Credits</h1>
       <ul class="credits__list">
-        <li>Backgrounds:
-          <br>
-          "Designed by upklyak / Freepik"
-          <br>
-          "Designed by brgfx / Freepik"
-          <br>
-          "Designed by vectorpouch / Freepik"
-        </li>
+        <li><h2>Music and Sounds:</h2><p>by Maxray Savage</p></li>
+        <li><h2>Backgrounds:</h2><p>Designed by upklyak, brgfx and vectorpouch from <a href="freepik.com">freepik.com</a></p></li>
       </ul>
-      <a class="credits__close-modal" href="./index.html">&times;</a>
+      <a class="credits__close-modal" href="#close">&times;</a>
     </div>
   </div>
   
