preloads more images to prevent pop-in

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <!-- preload background images -->
+    <link rel="preload" href="./assets/Backgrounds/Castle/castle01.jpg" as="image" />
+    <link rel="preload" href="./assets/monster/Extras/Wizard.png" as="image" />
     <link rel="preload" href="./assets/Backgrounds/road/12Z_2104.w026.n002.312B.p1.312.jpg" as="image" />
     <link rel="preload" href="./assets/Backgrounds/Cave/cave_edited.jpg" as="image" />
     <link rel="preload" href="./assets/Backgrounds/Prison/prison01.jpg" as="image" />
