--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <!-- preload background images -->
     <link rel="preload" href="./assets/Backgrounds/Castle/castle01.jpg" as="image" />
     <link rel="preload" href="./assets/monster/Extras/Wizard.png" as="image" />
-    <link rel="preload" href="./assets/Backgrounds/road/12Z_2104.w026.n002.312B.p1.312.jpg" as="image" />
+    <link rel="preload" href="./assets/Backgrounds/road/12Z_2104.w026.n002.312B.p1.312-smaller.jpg" as="image" />
     <link rel="preload" href="./assets/Backgrounds/Cave/cave_edited.jpg" as="image" />
-    <link rel="preload" href="./assets/Backgrounds/Prison/prison01.jpg" as="image" />
+    <link rel="preload" href="./assets/Backgrounds/Prison/prison01-smaller.jpg" as="image" />
     <link rel="preload" href="./assets/Backgrounds/Interior/interior04compressed.jpg" as="image" />
   </head>
   <body>
