--- a/index.html
+++ b/index.html
@@ -101,12 +101,16 @@
   
   <div id="credits" class="credits__modal">
     <div class="credits__container">
-      <h1 class="credits__header">Credits</h1>
-      <ul class="credits__list">
-        <li><h2>Music and Sounds:</h2><p>by Maxray Savage</p></li>
-        <li><h2>Backgrounds:</h2><p>Designed by upklyak, brgfx and vectorpouch from <a href="freepik.com">freepik.com</a></p></li>
-      </ul>
       <a class="credits__close-modal" href="#close">&times;</a>
+      <ul class="credits__list">
+        
+        <h1 class="credits__header">Credits</h1>
+        <li><h2>Music and Sounds:</h2><p>by Maxray Savage</p></li>
+        <li><h2>Backgrounds:</h2><p>Designed by upklyak, brgfx and vectorpouch <br>from <a href="freepik.com">freepik.com</a></p></li>
+        <li><h2>Monster Assets:</h2><p>by Pipoya <br>from <a href="https://pipoya.itch.io/free-rpg-monster-pack">free-rpg-monster-pack</a></p></li>
+        <li><h2>Developed by:</h2><p>arstix, es-rene99, fgostev and Maxray Savage.</p></li>
+      </ul>
+      
     </div>
   </div>
   
