begins refactoring special effects

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <div class="items__container">
               <!-- TODO generate a list of items in JS -->
                 <div id="special-items" class="specialItem__div">
-                  <img src="" class="" id="specialEffect1" />
-                  <img src="" class="" id="specialEffect2" />
-                  <img src="" class="" id="specialEffect3" />
-                  <img src="" class="" id="specialEffect4" />
-                  <img src="" class="" id="specialEffect5" />
+                  <img src="./assets/specialEffects/breastplate.png" class="special-ability armor" id="specialEffect1" />
+                  <img src="./assets/specialEffects/emptyhourglass.png" class="special-ability time-freeze" id="specialEffect2" />
+                  <img src="./assets/specialEffects/halfdead.png" class="special-ability second-life" id="specialEffect3" />
+                  <img src="./assets/specialEffects/top-paw.png" class="special-ability claw" id="specialEffect4" />
+                  <img src="./assets/specialEffects/wingfoot.png" class="special-ability wing-foot" id="specialEffect5" />
               </div>
             </div>
           </div>
