fix: missing changes from credits styling #64

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       <ul class="credits__list">
         
         <h1 class="credits__header">Credits</h1>
-        <li><h2>Music and Sounds:</h2><p>by Maxray Savage</p></li>
+        <li><h2>Music and Sounds:</h2><p>by <a href="https://github.com/MaxraySavage">Maxray Savage</a></p></li>
         <li><h2>Backgrounds:</h2><p>Designed by upklyak, brgfx and vectorpouch <br>from <a href="freepik.com">freepik.com</a></p></li>
         <li><h2>Monster Assets:</h2><p>by Pipoya <br>from <a href="https://pipoya.itch.io/free-rpg-monster-pack">free-rpg-monster-pack</a></p></li>
-        <li><h2>Developed by:</h2><p>arstix, es-rene99, fgostev and Maxray Savage.</p></li>
+        <li><h2>Developed by:</h2><p><a href="https://github.com/arstix">arstix</a>, <a href="https://github.com/es-rene99">es-rene99</a>, <a href="https://github.com/fgostev">fgostev</a> and <a href="https://github.com/MaxraySavage">Maxray Savage.</a></p></li>
       </ul>
       
     </div>
