feat: lvl container & refactor indicator style #18

--- a/index.html
+++ b/index.html
@@ -91,10 +91,13 @@
             <div id="timer-animation-container"></div>
             <div class="timer__label" id="gameTimer"></div>
           </div>
-          <div id="game__score" class="game__score">
-            <h1 class="score__title">SCORE:</h1>
-            <!-- TODO gameScore functionality -->
-            <label class="score__label" id="gameScore">0</label>
+          <div id="game__score" class="game__score standard-indicator__container">
+            <h1 class="score__title standard-indicator__header">SCORE:</h1>
+            <label class="score__label standard-indicator__label" id="gameScore">0</label>
+          </div>
+          <div id="level__container" class="level__container standard-indicator__container">
+            <h1 class="level__header standard-indicator__header">Level</h1>.
+            <label class="level__label standard-indicator__label" id="level__label">0</label>
           </div>
         </div>
       </aside>
