feat: basic lvl increase displaying #18

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <label class="score__label standard-indicator__label" id="gameScore">0</label>
           </div>
           <div id="level__container" class="level__container standard-indicator__container">
-            <h1 class="level__header standard-indicator__header">Level</h1>.
-            <label class="level__label standard-indicator__label" id="level__label">0</label>
+            <h1 class="level__header standard-indicator__header">LEVEL:</h1>
+            <label class="level__label standard-indicator__label" id="levelIndicator">0</label>
           </div>
         </div>
       </aside>
