--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div id="game-wrapper" class="game-wrapper hidden-element">
           
           <div id="operation__panel" class="operation__panel">
-            <p id="operation__question" class="operation__question"></p>
+            <p id="operation__question" class="operation__question number-shadow-color"></p>
           </div>
           <div
             id="player-notification-msgs"
