minimum viable final scene function implemented

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div id="story"></div>
       <img src="" alt="" id="wizard1" class="wizard">
       <img src="" alt="" id="egg2" class="egg">
+      <img src="" alt="" id="player-monster" class="egg">
       </div>
       <div class="next-wrapper">
       <button class="next-scene hidden-element"><i class="fas fa-angle-double-right"></i></i></button>
