improves story text visibility

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- cut scene -->
     <div id="cut-scene" class="hidden-element">
       <div class="scene">
-        <div id="story"></div>
+        <div id="story" class="shadow-color"></div>
       <img src="" alt="" id="wizard1" class="wizard">
       <img src="" alt="" id="egg2" class="egg">
       <img src="" alt="" id="player-monster" class="egg">
@@ -87,7 +87,7 @@
         <div id="game-wrapper" class="game-wrapper hidden-element">
           
           <div id="operation__panel" class="operation__panel">
-            <p id="operation__question" class="operation__question number-shadow-color"></p>
+            <p id="operation__question" class="operation__question shadow-color"></p>
           </div>
           <div
             id="player-notification-msgs"
