--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Calculationster
           </h1>
           <div class="game-left-panel__items">
-            <h1 class="items__header">Items:</h1>
+            <h1 class="items__header">Items</h1>
             <div class="items__container">
               <!-- TODO generate a list of items in JS -->
                 <div id="special-items" class="specialItem__div">
@@ -102,14 +102,16 @@
 
       <aside class="right-sidebar sidebar hidden-element">
         <div id="game-right-panel" class="game-right-panel hidden-element">
-          <div id="game__timer" class="game__timer hidden-element">
-            <h1 class="timer__title">TIME:</h1>
-            <div id="timer-animation-container"></div>
-            <div class="timer__label" id="gameTimer"></div>
-          </div>
-          <div id="game__score" class="game__score standard-indicator__container">
-            <h1 class="score__title standard-indicator__header">SCORE:</h1>
-            <label class="score__label standard-indicator__label" id="gameScore">0</label>
+          <div id="timer-and-score-container">
+            <div id="game__score" class="game__score standard-indicator__container">
+              <h1 class="score__title standard-indicator__header">SCORE:</h1>
+              <label class="score__label standard-indicator__label" id="gameScore">0</label>
+            </div>
+            <div id="game__timer" class="game__timer hidden-element">
+              <h1 class="timer__title">TIME:</h1>
+              <div id="timer-animation-container"></div>
+              <div class="timer__label" id="gameTimer"></div>
+            </div>
           </div>
           <div id="level__container" class="level__container standard-indicator__container">
             <h1 class="level__header standard-indicator__header">LEVEL:</h1>
