--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
   </head>
   <body>
-    <div class="background-image-div current"></div>
+    <div id="background-image-current"class="background-image-div current"></div>
     <div class="background-image-div preload"></div>
     <!-- welcome page -->
     <div id="start-container">
