basic function for monster comments

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             class="player-notification-msgs"
           ></div>
           <div id="monster-container" class="monster-container">
+            <p id='monsterComments'>I'll get out of here!</p>
             <img src="" alt="" id="monster" class="monster" />
           </div>
         
