monster comments with styling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             class="player-notification-msgs"
           ></div>
           <div id="monster-container" class="monster-container">
-            <p id='monsterComments'>I'll get out of here!</p>
+            <!-- monster comments here! -->
+            <p id = 'monsterComments'class='winningComment'>I'll get out of here!</p>
             <img src="" alt="" id="monster" class="monster" />
           </div>
         
