implements mute button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div id="background-image-current"class="background-image-div current"></div>
     <div class="background-image-div preload"></div>
     <!-- welcome page -->
+    <button class="hidden-element" id="mute-button">
+      <img id="mute-button-img" src= "./assets/icons/Speaker_Icon.svg"> 
+    </button>
     <div id="start-container">
       <div class="thunder"></div>
       <h1 id="opening-title">Calculationster</h1>
